Product gallery > Selected image > Fix the invisible border

--- a/themes/origins/styles/featured-product.scss
+++ b/themes/origins/styles/featured-product.scss
@@ -93,7 +93,7 @@
             }
 
             &:has(input:checked) {
-              box-shadow: var(--shadow-dark-focus-sm);
+              border-color: currentColor;
 
               &::before {
                 opacity: 1;
